# patra-darpan

./: .gitignore  .netlifyignore  LICENSE  README.md  netlify.toml  patra-darpan-spasta-corpus.code-workspace  pyproject.toml
.cache/: ijhs-classified.md  ijhs-classified.tsv  ijhs.tsv
.netlify/: netlify.toml
corpus/: README.md  cahc-pdf-mirrors.tsv  cahc_authored_registry.txt  curated-links.tsv  curated-pdfs.tsv  ijhs-classified.tsv  ijhs.tsv  index.tsv
docs/: cahc-p60-projection-prd.md  decode-lab.md  feature-backlog.md  index-tsv-projection-contract.md  spasta-corpus-decisions.md  spasta-corpus-prd.md  spasta-corpus-technical-design.md
exports/: index.tsv
lib/: audit_corpus_inputs.py  cahc_registry.py  config.py  export_index_tsv.py  load_cahc_authored_registry.py  load_cahc_pdf_mirrors.py  load_curated_tsv.py  load_ijhs_tsv.py  schema.sql  validate_legacy_index.py
ops/: README.md  analyze_tsv.py  build_data.py  dedupe_tsv.py  export_patra_darpan_data_js.py  generate_juni_embeds.py  migrate_index.py  sync_gcs.py  sync_pdfs.py
pipeline/: 01-scrape.py  02-patch.py  03-classify.py  04-compare.py  05-import-cahcblr.py  README.md  bootstrap-ingest.py
reports/: corpus-input-audit.md  filename-encoding-duplicate-pairs.md  gcs-cleanup-manifest-2026-04-10.md  legacy-index-validation.md  orphan-pdf-review.html
scripts/: audit_corpus_inputs.py  build_corpus_metadata.py  export_index_tsv.py  validate_legacy_index.py
web/: .netlifyignore  README.md  iframe-sandbox.html  index.html  netlify.toml  p60-projection-sandbox.html  package.json  test_function.js
(+7 files in other folders)
